Modify configuration for Firebase

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,5 @@
 {
   "projects": {
-    "default": "hello-world-pwa-8669c",
-    "deploy": "hello-world-pwa-8669c"
+    "default": "fir-pwa-fd3e4"
   }
 }
