--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Hello World PWA",
-  "short_name": "Hi",
+  "short_name": "Demo PWA App",
   "icons": [{
     "src": "icons/icon-128x128.png",
       "sizes": "128x128",
